[gd_scene load_steps=2 format=3 uid="uid://hx7ftx7y1syw"]

[ext_resource type="Script" uid="uid://l3c8uus17wxo" path="res://Resources/Inventory/InventoryUI.gd" id="1_nbq8l"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 100.0
script = ExtResource("1_nbq8l")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CloseButton" type="Button" parent="Background"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 30.0
text = "X"

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleBar" type="Panel" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Background/VBoxContainer/TitleBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "INVENTORY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemGrid" type="GridContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 8

[node name="ItemInfoPanel" type="Panel" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ItemInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemNameLabel" type="Label" parent="Background/VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Item Name"

[node name="ItemDescriptionLabel" type="Label" parent="Background/VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Item Description"

[node name="ItemQuantityLabel" type="Label" parent="Background/VBoxContainer/ItemInfoPanel/VBoxContainer"]
layout_mode = 2
text = "Quantity: 0"
